--- a/index.html
+++ b/index.html
@@ -6,39 +6,80 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>NFTLANDING | Lorem Ipsum</title>
   </head>
   <body>
-    <main>
-      <header class="main-hero">
-        <nav>
-          <h1 id="logo">
-            <img src="./img/logo.svg" alt="NFTLANDING logo" />
-          </h1>
-          <ul>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Launch</a></li>
-            <li "><a href="#", class="sign-up">Sign Up</a></li>
-          </ul>
-        </nav>
-      </header>
-      <section id="features">
-        <h4>LAUNCHING SOON</h4>
-        <h1 id="featuresh1">
-          An NFT like <br />
-          no other
+    <header class="main-hero">
+      <nav>
+        <h1 id="logo">
+          <img src="./img/logo.svg" alt="NFTLANDING logo" />
         </h1>
+        <ul>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#">Launch</a></li>
+          <li><a href="#" , class="sign-up">Sign Up</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="features">
+        <div class="features-text">
+          <h4>LAUNCHING SOON</h4>
+          <h1>
+            An NFT like <br />
+            no other
+          </h1>
+          <p>
+            Don't miss out on the release of our new NFT. Sign up <br />
+            below to recieve updates when we go live.
+          </p>
+          <button><a href="#">Sign Up</a></button>
+        </div>
+        <div class="features-img"><img src="./img/graphic.svg" /></div>
+      </section>
+      <section id="about">
+        <div class="main-text">
+          <div class="text">
+            <h1>Free NFT for early birds</h1>
+            <p>Sign up today and youll get a free NFT when we launch.</p>
+          </div>
+        </div>
+        <div class="sponsors">
+          <div class="item">
+            <img src="./img/1.svg" />
+          </div>
+          <div class="item">
+            <img src="./img/2.svg" />
+          </div>
+
+          <div class="item">
+            <img src="./img/3.svg" />
+          </div>
+
+          <div class="item">
+            <img src="./img/4.svg" />
+          </div>
+
+          <div class="item">
+            <img src="./img/5.svg" />
+          </div>
+        </div>
+        <h1>LE Super Rare Auction</h1>
         <p>
-          Don't miss out on the release of our new NFT. Sign up <br />
-          below to recieve updates when we go live.
+          We have released four limited edition NFTs early which can be bid on
+          via <a href="#">OpenSea</a>
         </p>
-        <button><a href="#">Sign Up</a></button>
       </section>
     </main>
+
+    <script src="/app.js"></script>
   </body>
 </html>
