--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <div class="item">
             <img src="./img/1.svg" />
           </div>
+
           <div class="item">
             <img src="./img/2.svg" />
           </div>
@@ -72,14 +73,153 @@
             <img src="./img/5.svg" />
           </div>
         </div>
-        <h1>LE Super Rare Auction</h1>
-        <p>
-          We have released four limited edition NFTs early which can be bid on
-          via <a href="#">OpenSea</a>
-        </p>
+        <div class="nft-gallery">
+          <h1>LE Super Rare Auction</h1>
+          <p>
+            We have released four limited edition NFTs early which can be bid on
+            via <a href="#">OpenSea.</a>
+          </p>
+          <div class="merchandise">
+            <div class="nft-item">
+              <img src="./img/nft/ntf-1.svg" alt="purple man nft" />
+              <div class="grey">
+                <div class="nft-header">
+                  <h6 class="orange">GLOOP SERIES</h6>
+                  <h6>TOP BID</h6>
+                </div>
+                <div class="nft-main">
+                  <h5>Purple Man</h5>
+                  <h5>
+                    <img src="./img/eth.svg" alt="etherium price icon" />2.99
+                    ETH
+                  </h5>
+                </div>
+                <div class="nft-footer">
+                  <h5>#12983</h5>
+                  <h5>1 day left</h5>
+                </div>
+              </div>
+            </div>
+            <div class="nft-item">
+              <img src="./img/nft/nft-2.svg" alt="purple man nft" />
+              <div class="grey">
+                <div class="nft-header">
+                  <h6 class="orange">GLOOP SERIES</h6>
+                  <h6>TOP BID</h6>
+                </div>
+                <div class="nft-main">
+                  <h5>Beige</h5>
+                  <h5>
+                    <img src="./img/eth.svg" alt="etherium price icon" />2.99
+                    ETH
+                  </h5>
+                </div>
+                <div class="nft-footer">
+                  <h5>#12983</h5>
+                  <h5>1 day left</h5>
+                </div>
+              </div>
+            </div>
+            <div class="nft-item">
+              <img src="./img/nft/ntf-3.svg" alt="purple man nft" />
+              <div class="grey">
+                <div class="nft-header">
+                  <h6 class="orange">GLOOP SERIES</h6>
+                  <h6>TOP BID</h6>
+                </div>
+                <div class="nft-main">
+                  <h5>Red Man</h5>
+                  <h5>
+                    <img src="./img/eth.svg" alt="etherium price icon" />2.99
+                    ETH
+                  </h5>
+                </div>
+                <div class="nft-footer">
+                  <h5>#12983</h5>
+                  <h5>1 day left</h5>
+                </div>
+              </div>
+            </div>
+            <div class="nft-item">
+              <img src="./img/nft/ntf-4.svg" alt="purple man nft" />
+              <div class="grey">
+                <div class="nft-header">
+                  <h6 class="orange">GLOOP SERIES</h6>
+                  <h6>TOP BID</h6>
+                </div>
+                <div class="nft-main">
+                  <h5>Green</h5>
+                  <h5>
+                    <img src="./img/eth.svg" alt="etherium price icon" />2.99
+                    ETH
+                  </h5>
+                </div>
+                <div class="nft-footer">
+                  <h5>#12983</h5>
+                  <h5>1 day left</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="features">
+        <div class="features-text border">
+          <h4>LAUNCHING SOON</h4>
+          <h1>An NFT like no other</h1>
+          <p>
+            Don't miss out on the release of our new NFT. Sign up <br />
+            below to recieve updates when we go live.
+          </p>
+          <button><a href="#">Sign Up</a></button>
+        </div>
+        <div class="img1">
+          <img class="img11" src="./img/upsell-footer-image.svg" />
+        </div>
       </section>
     </main>
-
-    <script src="/app.js"></script>
+    <section id="footer">
+      <div class="box1">
+        <img src="./img/logo.svg" alt="logo" />
+        <h1>Exclusive NFT collection</h1>
+        <div class="social">
+          <img src="./img/iconmonstr-facebook-3.svg" alt="facebook" />
+          <img src="./img/iconmonstr-twitter-1.svg" alt="twitter" />
+          <img src="./img/iconmonstr-instagram-11.svg" alt="instagram" />
+          <img
+            src="http://www.clker.com/cliparts/d/U/9/g/u/m/tiktok-svg-icon.svg"
+            alt="tiktok"
+          />
+        </div>
+      </div>
+      <div class="box2">
+        <ul>
+          <li><strong>About</strong></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Legal</a></li>
+        </ul>
+        <ul>
+          <li><strong>NFT</strong></li>
+          <li><a href="#">OpenSea</a></li>
+          <li><a href="#">Maker</a></li>
+          <li><a href="#">Learn</a></li>
+        </ul>
+        <ul>
+          <li><strong>Contact</strong></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+        <ul>
+          <li><strong>Social</strong></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Instagram</a></li>
+        </ul>
+      </div>
+    </section>
+    <footer class="real-footer">
+      <p>&copy Copyright 2022 Puk3nzo</p>
+      <p>Launching Never</p>
+    </footer>
   </body>
 </html>
