desktop fixes sadly mobile responsivness isnt finished

--- a/index.html
+++ b/index.html
@@ -53,30 +53,25 @@
           </div>
         </div>
         <div class="sponsors">
-          <div class="item">
+          <div class="item overflow BOXBIG">
             <img src="./img/1.svg" />
           </div>
-<<<<<<< HEAD
-
-=======
->>>>>>> f9f0db99c845f18b1b909940b9f4b9bb40118230
-          <div class="item">
+          <div class="item BOXBIG">
             <img src="./img/2.svg" />
           </div>
-
-          <div class="item">
+          <div class="item BOXBIG">
             <img src="./img/3.svg" />
           </div>
 
-          <div class="item">
+          <div class="item gone">
             <img src="./img/4.svg" />
           </div>
 
-          <div class="item">
+          <div class="item BOXBIG">
             <img src="./img/5.svg" />
           </div>
         </div>
-<<<<<<< HEAD
+      </div>
         <div class="nft-gallery">
           <h1>LE Super Rare Auction</h1>
           <p>
@@ -167,7 +162,7 @@
           </div>
         </div>
       </section>
-      <section id="features">
+      <section id="features" >
         <div class="features-text border">
           <h4>LAUNCHING SOON</h4>
           <h1>An NFT like no other</h1>
@@ -182,6 +177,7 @@
         </div>
       </section>
     </main>
+    <div class="BOXBIG">
     <section id="footer">
       <div class="box1">
         <img src="./img/logo.svg" alt="logo" />
@@ -197,44 +193,46 @@
         </div>
       </div>
       <div class="box2">
+      <div class="boxes"> 
         <ul>
           <li><strong>About</strong></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Terms</a></li>
           <li><a href="#">Legal</a></li>
         </ul>
+      </div>
+      <div class="boxes"> 
         <ul>
           <li><strong>NFT</strong></li>
           <li><a href="#">OpenSea</a></li>
           <li><a href="#">Maker</a></li>
           <li><a href="#">Learn</a></li>
-        </ul>
+      </div>
+    </ul>
+        <div class="boxes"> 
         <ul>
           <li><strong>Contact</strong></li>
           <li><a href="#">Press</a></li>
           <li><a href="#">Support</a></li>
-        </ul>
+      </div>
+    </ul>
+        <div class="boxes"> 
         <ul>
           <li><strong>Social</strong></li>
           <li><a href="#">Twitter</a></li>
           <li><a href="#">Instagram</a></li>
         </ul>
       </div>
+    </div>
+  </div>
     </section>
+    <!-- big prank -->
     <footer class="real-footer">
       <p>&copy Copyright 2022 Puk3nzo</p>
-      <p>Launching Never</p>
+        <div class="gone">
+          <p>Launching Never</p>
+        </div>
     </footer>
-=======
-        <h1>LE Super Rare Auction</h1>
-        <p>
-          We have released four limited edition NFTs early which can be bid on
-          via <a href="#">OpenSea</a>
-        </p>
-      </section>
     </main>
-
-    <script src="/app.js"></script>
->>>>>>> f9f0db99c845f18b1b909940b9f4b9bb40118230
   </body>
 </html>
